the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2018-04-25] RFC4880: changed CertificationHash() to support user attributes
* [2018-04-24] RFC4880: added limit TMCG_OPENPGP_MAX_ALLOC for memory allocation
* [2018-04-22] RFC4880: added support for Camellia cipher (cf. RFC 5581)
* [2018-04-22] added abstraction types tmcg_mpi_vector_t and tmcg_mpi_matrix_t
* [2018-04-22] added abstraction types tmcg_mpz_vector_t and tmcg_mpz_matrix_t
* [2018-03-29] VTMF: added KeyGenerationProtocol_NumberOfKeys()
* [2018-03-20] release 1.3.12 of LibTMCG
* [2018-03-19] RFC4880: added PacketSigPrepareDesignatedRevoker()
* [2018-03-18] RFC4880: added TMCG_OpenPGP_Keyring
* [2018-03-17] RFC4880: increased robustness of rpos-detection in ArmorDecode()
* [2018-03-15] RFC4880: added new type tmcg_openpgp_revkey_t
* [2018-03-13] RFC4880: changed interface PacketSigPrepareDetachedSignature()
* [2018-03-03] RFC4880: added SignatureParse()
* [2018-03-02] RFC4880: added AsymmetricEncryptRSA() and AsymmetricDecryptRSA()
* [2018-03-01] RFC4880: added Twofish, SHA384, and SHA512 to prefered algos
* [2018-02-27] RFC4880: added no-modify key server preferences for self-sigs
* [2018-02-25] RFC4880: fixes uninitialized context for unhashed subpackets
* [2018-02-18] RFC4880: fixes format from "%M" to "%b" in gcry_sexp_build()
* [2018-02-11] RFC4880: added TMCG_OpenPGP_Signature, ..., TMCG_OpenPGP_Pubkey
* [2018-02-11] RFC4880: added PacketContextRelease() and PublicKeyBlockParse()
* [2018-02-11] RFC4880: unified name space of some types (e.g. tmcg_byte_t)
* [2018-02-10] added function mpz_lprime_prefix() for k-prefix tweak
* [2018-02-10] improved strength of oracle hash function g() by second algo